--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,15 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+.drag {
+    -webkit-app-region: drag;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+.no-drag {
+    -webkit-app-region: no-drag;
+    user-select: initial;
+    -webkit-user-select: initial;
+}
